Configuration warnings removed